# Exercism

./: .gitignore  README.md
julia/hello-world/.exercism/: metadata.json
julia/leap/: leap.jl
julia/leap/.exercism/: metadata.json
python/: .gitignore  pyproject.toml
python/card-games/: lists.py
python/card-games/.exercism/: metadata.json
python/cater-waiter/: sets.py
python/cater-waiter/.exercism/: metadata.json
python/chaitanas-colossal-coaster/: list_methods.py
python/chaitanas-colossal-coaster/.exercism/: metadata.json
python/currency-exchange/: README.md  exchange.py
python/currency-exchange/.exercism/: metadata.json
python/flatten-array/: flatten_array.py
python/flatten-array/.exercism/: metadata.json
python/ghost-gobble-arcade-game/: arcade_game.py
python/ghost-gobble-arcade-game/.exercism/: metadata.json
python/grains/: grains.py
python/grains/.exercism/: metadata.json
python/hello-world/.exercism/: metadata.json
python/inventory-management/: dicts.py
python/inventory-management/.exercism/: metadata.json
python/little-sisters-vocab/: strings.py
python/little-sisters-vocab/.exercism/: metadata.json
python/making-the-grade/: loops.py
python/making-the-grade/.exercism/: metadata.json
python/meltdown-mitigation/: conditionals.py
python/meltdown-mitigation/.exercism/: metadata.json
python/tisbury-treasure-hunt/: tuples.py
python/tisbury-treasure-hunt/.exercism/: metadata.json
python/triangle/: triangle.py
python/triangle/.exercism/: metadata.json
